# intercepts

./: .gitignore  .noseids  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  style.yml
docs/: Makefile  api.rst  conf.py  fmttypehints.py  index.rst  intercepts.html  make.bat
docs/getting_started/: install.rst  quickstart.rst
docs/user/: install.rst  quickstart.rst
handler/: Makefile  README.md  handler.c  handler_ptr.c  install_build_tools.sh
intercepts/: __init__.py  __version__.py  _builtins.py  _utils.py  builtinhandlermodule.c  builtinutilsmodule.c  functypes.py  registration.py  utils.py
intercepts/_handlers/: __init__.py  base.py  linux.py  windows.py
intercepts/_introspection/: __init__.py  linux.py  windows.py
scripts/: style.sh
src/: README.md  handler.c
tests/: conftest.py  test_builtins.py  test_dynamic_globals.py  test_errors.py  test_examples.py  test_functions.py  test_independent_handler.py  test_intercepts.py  test_methods.py  test_python_builtins.py  test_scopes.py  testintercepts.py  testmethods.py
