[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "intercepts"
dynamic = ["version"]
description = "Intercept function and method calls"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "David Shriver", email = "davidshriver@outlook.com" }]
keywords = ["development", "intercepts", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.7"

[project.urls]
Source = "https://github.com/dlshriver/intercepts"
Documentation = "https://intercepts.readthedocs.io/en/latest/"
Issues = "https://github.com/dlshriver/intercepts/issues"

[project.optional-dependencies]
dev = ["mypy", "black", "isort", "coverage", "pytest"]
lint = ["mypy"]
style = ["black", "isort"]
test = ["coverage", "pytest"]
docs = ["furo", "sphinx"]

[tool.setuptools.dynamic]
version = { attr = "intercepts.__version__.__version__" }

[tool.setuptools.packages.find]
include = ["intercepts*"]

[tool.coverage.run]
branch = true
command_line = "-m pytest"
parallel = true
source = ["intercepts"]

[tool.isort]
profile = "black"
src_paths = ["intercepts", "test"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ff --verbose --import-mode=importlib"
testpaths = ["tests"]
